--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,8 +19,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, sans-serif;
-  margin: 0 0 1rem;
-  font-weight: normal; }
+  margin: 0 0 1rem; }
 
 address {
   font-style: normal; }
@@ -54,7 +53,8 @@ h6 {
   margin-bottom: 3.2rem; }
 
 .container {
-  padding: 3.2rem; }
+  padding: 3.2rem;
+  min-width: 320px; }
 
 .buttons {
   padding: 0.8rem 2rem; }
@@ -68,28 +68,13 @@ input, select {
 
 /* Search Form */
 .search-property__field {
-  display: flex; }
-
-.search-property__control {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: stretch;
+  display: inline-grid;
+  grid-gap: 0.8rem;
+  grid-template-columns: 1fr auto;
   width: 100%; }
 
 .search-property__input {
   width: 100%; }
-
-.search-property__action {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  margin-left: 1.2rem; }
 
 /* Search Results */
 .property-listings ul {
@@ -119,13 +104,46 @@ input, select {
   padding: 0.8rem; }
   .property-listings__agent-details address p, .property-listings__agent-details address img {
     margin-bottom: 0.4rem;
-    font-size: 1.2rem; }
+    font-size: 1.4rem; }
 
-/* Medium Styles */
+/* Medium Device Styles */
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .container {
     padding: 2.4rem; }
+  .subtle-header {
+    margin-bottom: 2.4rem; }
+  .property-listings ul li {
+    padding-bottom: 4.8rem; }
   .property-listings article {
     display: grid;
     grid-template-columns: 2fr 2fr;
-    grid-gap: 2.4rem; } }
+    grid-gap: 2.4rem; }
+  .property-listings__agent-details {
+    grid-column: span 2;
+    background: #cccccc; }
+    .property-listings__agent-details address {
+      display: inline-grid;
+      grid-gap: 2.4rem;
+      grid-template-columns: auto auto auto auto;
+      align-items: center; }
+      .property-listings__agent-details address img, .property-listings__agent-details address p {
+        display: inline-block;
+        margin-bottom: 0; } }
+
+/* Medium Device Styles */
+@media screen and (max-width: 767px) {
+  .container {
+    padding: 1.6rem; }
+  .subtle-header {
+    margin-bottom: 1.6rem; }
+  .property-listings ul li {
+    padding-bottom: 3.2rem; }
+  .property-listings article {
+    display: block; }
+  .property-listings__property-image img {
+    width: auto;
+    margin-bottom: 1.2rem; }
+  .property-listings__agent-details address {
+    display: block; }
+    .property-listings__agent-details address img, .property-listings__agent-details address p {
+      display: block; } }
