--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,6 +3,9 @@ $primary-color:#222222;
 $formborders: #999999;
 $primary-button-bg:#cccccc;
 $address-bg:#cccccc;
+$error-text:#a94442;
+$error-bg:#f2dede;
+$error-border:#ebccd1;
 
 /* Break Points */
 $small-device-max:767px;
