--- a/scss/main.scss
+++ b/scss/main.scss
@@ -71,6 +71,9 @@ input, select {
     padding:0.8rem;
     border:1px solid $formborders;
 }
+.hidden {
+    display:none;
+}
 
 /* Search Form */
 .search-property {
@@ -82,6 +85,14 @@ input, select {
     }
     &__input {
         width:100%;
+    }
+    &__form-errors {
+        background:$error-bg;
+        color:$error-text;
+        border:1px solid $error-border;
+        padding:0.8rem;
+        margin-top:1.2rem;
+        border-radius:0.4rem;
     }
 }
 
